# libcrypti2c

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  crypti2c-0.1.pc  crypti2c.h  crypti2c.pc.in  cryptoauth.pc.in  i2c.sch  libcrypti2c.h  libcryptoauth.h
crypti2c/: atecc108_command.c  atecc108_command.h  atsha204_command.c  atsha204_command.h  command_adaptation.c  command_adaptation.h  command_util.c  command_util.h  configzone.scm  crc.c  crc.h  ecdsa.c  ecdsa.h  guile_ext.c  guile_ext.h  hash.c  hash.h  i2c.c  i2c.h  log.c  log.h  util.c  util.h
crypti2c/scheme/: config_zone.scm
crypti2c/scheme/ci2c/: configzone.scm
data/: atecc108_default.xml
debian/: README.Debian  README.source  changelog  control  copyright  files  init.d.ex  libcryptoauth.cron.d.ex  libcryptoauth.default.ex  libcryptoauth.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex  watch.ex
src/: atecc108_command.c  atecc108_command.h  atsha204_command.c  atsha204_command.h  command_adaptation.c  command_adaptation.h  command_util.c  command_util.h  configfile.c  configzone.h  configzone.scm  crc.c  crc.h  ecdsa.c  ecdsa.h  guile_ext.c  hash.c  hash.h  hkdf.c  i2c.c  i2c.h  init.c  log.c  log.h  otp.c  otp.h  util.c  util.h
test/: Makefile.am  burnutil.c  configzone_test.scm  csu.c  ecdh.c  test_hmac.c  test_hmac.h  test_xml.c  test_xml.h  tester.c
test/test_keys/: test.key
utils/: Makefile.am  ecdh.c
