# Copyright (C) 2014-2015 Cryptotronix, LLC.

# This file is part of libcryptoauth.

# libcryptoauth is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# any later version.

# libcryptoauth is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.

# You should have received a copy of the GNU Lesser General Public License
# along with libcryptoauth.  If not, see <http://www.gnu.org/licenses/>.

AC_INIT([cryptoauth], [0.6.0], [bugs@cryptotronix.com], [libcryptoauth],
        [https://www.github.com/cryptotronix/libcryptoauth])
AC_PREREQ([2.59])
AC_USE_SYSTEM_EXTENSIONS
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_MACRO_DIR([m4])
PKG_PROG_PKG_CONFIG
AM_PROG_AR

AC_ARG_WITH([libxml],
AS_HELP_STRING([--with-libxml], [Include libxml]))

AS_IF([test "x$with_libxml" = "xyes"], [
            PKG_CHECK_MODULES([XML], [libxml-2.0 >= 2.8])
AC_DEFINE([CRYPTOAUTH_HAVE_LIBXML], [1], [Use libxml])
])
AM_CONDITIONAL([HAVE_XML], [test "x$with_libxml" = "xyes"])


AC_ARG_ENABLE(tests,
[AS_HELP_STRING(--disable-tests,Do not build tests)],
[
  AS_IF([test "x$enableval" = "xno"], [
    enable_tests="no"
    AC_MSG_WARN([tests are disabled])
  ], [
    enable_tests="yes"
  ])
],
[
  enable_tests="yes"
  #Check for libglib (used for testing)
  PKG_CHECK_MODULES([LIBGLIB], [glib-2.0])
])
AM_CONDITIONAL([WANT_TESTS], [test "x$enable_tests" = "xyes"])

#Check for libyacl
PKG_CHECK_MODULES([YACL], [yacl])

AC_CHECK_HEADERS_ONCE([argp.h])

AC_PATH_PROG([DEBUILD], [dpkg-buildpackage], [notfound])
AC_PATH_PROG([TEST], [test])
# Generate two configuration headers; one for building the library itself with
# an autogenerated template, and a second one that will be installed alongside
# the library.
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AC_PROG_CC_C_O
AM_PROG_CC_C_O
LT_INIT([static])
gl_EARLY
gl_INIT
AC_PROG_MKDIR_P

# Define these substitions here to keep all version information in one place.
# For information on how to properly maintain the library version information,
# refer to the libtool manual, section "Updating library version information":
# http://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html
AC_SUBST([CRYPTOAUTH_SO_VERSION], [5:0:0])
AC_SUBST([CRYPTOAUTH_API_VERSION], [0.6])


AC_CONFIG_FILES([Makefile test/Makefile lib/Makefile
                 cryptoauth.pc:cryptoauth.pc.in])
AC_OUTPUT


echo "
     $PACKAGE_NAME version $PACKAGE_VERSION
     Prefix..........: $prefix
     Deb Build.......: $enable_deb
     C Compiler......: $CC $CFLAGS $CPPFLAGS
     C++ Compiler....: $CXX $CXXFLAGS $CPPFLAGS
     Linker..........: $LD $LDFLAGS $LIBS
     Build tests.....: $enable_tests
"
